--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@heroicons/react": "^2.0.12",
     "next": "13.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
