--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.39.1",
     "react-phone-input-2": "^2.15.1"
   },
   "devDependencies": {
