Change API endpoint url

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_ENDPOINT=https://talents-valley.herokuapp.com/api/
+NEXT_PUBLIC_API_ENDPOINT=https://talents-valley-backend.herokuapp.com/api
