--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.12",
     "axios": "^1.1.3",
+    "filesize": "^10.0.6",
     "js-cookie": "^3.0.1",
     "next": "13.0.0",
     "react": "18.2.0",
