--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.12",
     "axios": "^1.1.3",
     "filesize": "^10.0.6",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.1",
     "next": "13.0.0",
+    "npm": "^9.6.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.1",
