--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "js-cookie": "^3.0.1",
     "next": "13.0.0",
     "npm": "^9.6.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^9.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.39.1",
